<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- ConstraintLayout for containing the widgets of WelcomeFragment-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".screen.onboarding.welcome_screen.WelcomeFragment">

        <!-- Title Text -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welcome_screen_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_screen"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Subtitle Text -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welcome_screen_subtitle_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/shoe_store_app"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_screen_title_text_view" />

        <!-- Button for move forward -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/welcome_screen_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/colorPrimary"
            android:minWidth="150dp"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_screen_subtitle_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>