<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="6dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/label_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:barrierMargin="10dp"
                app:constraint_referenced_ids="tv_name_label, tv_size_label, tv_company_label, tv_description_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name_label"
                style="@style/shoe_item_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name_value"
                style="@style/shoe_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{shoe.name}"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_name_label"
                app:layout_constraintStart_toEndOf="@id/label_barrier"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_size_label"
                style="@style/shoe_item_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_size_value"
                style="@style/shoe_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_size_label"
                app:layout_constraintStart_toEndOf="@id/label_barrier"
                app:layout_constraintTop_toBottomOf="@id/tv_name_label"
                app:text="@{shoe.size}" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_company_label"
                style="@style/shoe_item_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/company"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_size_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_company_value"
                style="@style/shoe_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{shoe.company}"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_company_label"
                app:layout_constraintStart_toEndOf="@id/label_barrier"
                app:layout_constraintTop_toBottomOf="@id/tv_size_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_description_label"
                style="@style/shoe_item_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_company_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_description_value"
                style="@style/shoe_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{shoe.description}"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_description_label"
                app:layout_constraintStart_toEndOf="@id/label_barrier"
                app:layout_constraintTop_toBottomOf="@id/tv_company_label" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>